# nfcpilot

./: .gitignore  README.md  pyproject.toml
src/joystick/: package.xml  setup.py
src/joystick/joystick/: joystick_node.py
src/nfc_card_reader/: package.xml  setup.cfg  setup.py
src/nfc_card_reader/nfc_card_reader/: nfc_reader_node.py
src/orchestrator_node/: package.xml  setup.cfg  setup.py
src/orchestrator_node/launch/: orchestrator_launch.py
src/orchestrator_node/orchestrator_node/: orchestrator_node.py
src/stepper_controller_cpp/: CMakeLists.txt  motors.yaml  package.xml
src/stepper_controller_cpp/config/: motors.yaml
src/stepper_controller_cpp/include/stepper_controller_cpp/: gpiod_stepper_motor.hpp  motor_controller_node.hpp
src/stepper_controller_cpp/src/: gpiod_stepper_motor.cpp  motor_controller_node.cpp  motor_controller_node_main.cpp
src/stepper_motor_controller/: package.xml  setup.cfg  setup.py
src/stepper_motor_controller/stepper_motor_controller/: gpio_stepper_motor.py  hardware_interface.py  mock_stepper_motor.py  motor_controller_node.py
