<?xml version="1.0"?>
<package format="3">
  <name>orchestrator_node</name>
  <version>0.1.0</version>
  <description>An orchestrator node that coordinates NFC reader and motor controller nodes.</description>
  <maintainer email="karloszuru@gmail.com">karlos</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>nfc_card_reader</exec_depend>
  <exec_depend>stepper_motor_controller</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
