<?xml version="1.0"?>
<package format="3">
  <name>stepper_motor_controller</name>
  <version>0.1.0</version>
  <description>ROS 2 package for controlling stepper motors via DRV8825 drivers using RPi.GPIO</description>
  <maintainer email="karloszuru@gmail.com">karlos</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>RPi.GPIO</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
